test/klee-out-14/test000019.kquery
array x[4] : w32 -> w8 = symbolic
array y[4] : w32 -> w8 = symbolic
array z[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 0
                 N0:(ReadLSB w32 0 x)))
         (Eq (SDiv w32 N1:(Mul w32 N0 N0) N0)
             N0)
         (Eq (SDiv w32 N2:(Mul w32 N1 N0) N1)
             N0)
         (Eq (SDiv w32 N3:(Mul w32 N2 N0) N2)
             N0)
         (Eq 0
             (ReadLSB w32 0 y))
         (Eq false
             (Eq 0
                 N4:(ReadLSB w32 0 z)))
         (Eq (SDiv w32 N5:(Mul w32 N4 N4) N4)
             N4)
         (Eq N3 N5)]
        false)
